--- a/index.html
+++ b/index.html
@@ -42,7 +42,18 @@
     <section>
       <div class="carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
-          <div id="banner-1"></div>
+          <div
+            id="banner-1"
+            class="py-10 text-center text-white m-aut0 ps-10 pe-20"
+          >
+            <p class="text-xl font-medium px-96 pt-32">Welcome to wicked wok</p>
+            <h1 class="text-center text-7xl">Cafe Klang</h1>
+            <p class="py-5 italic">your favorite coffee daily lives.</p>
+            <div>
+              <button class="btn bg-green-400">Our Story</button>
+              <button class="btn bg-yellow-800">Check Menu</button>
+            </div>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
@@ -51,10 +62,18 @@
           </div>
         </div>
         <div id="slide2" class="carousel-item relative w-full">
-          <img
-            src="/images/stock/photo-1609621838510-5ad474b7d25d.jpg"
-            class="w-full"
-          />
+          <div
+            id="banner-2"
+            class="py-10 text-center text-white m-aut0 ps-10 pe-20"
+          >
+            <p class="text-xl font-medium px-96 pt-32">Welcome to wicked wok</p>
+            <h1 class="text-center text-7xl">Cafe Klang</h1>
+            <p class="py-5 italic">your favorite coffee daily lives.</p>
+            <div>
+              <button class="btn bg-green-400">Our Story</button>
+              <button class="btn bg-yellow-800">Check Menu</button>
+            </div>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
@@ -63,26 +82,22 @@
           </div>
         </div>
         <div id="slide3" class="carousel-item relative w-full">
-          <img
-            src="/images/stock/photo-1414694762283-acccc27bca85.jpg"
-            class="w-full"
-          />
+          <div
+            id="banner-3"
+            class="py-10 text-center text-white m-aut0 ps-10 pe-20"
+          >
+            <p class="text-xl font-medium px-96 pt-32">Welcome to wicked wok</p>
+            <h1 class="text-center text-7xl">Cafe Klang</h1>
+            <p class="py-5 italic">your favorite coffee daily lives.</p>
+            <div>
+              <button class="btn bg-green-400">Our Story</button>
+              <button class="btn bg-yellow-800">Check Menu</button>
+            </div>
+          </div>
           <div
             class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
           >
             <a href="#slide2" class="btn btn-circle">❮</a>
-            <a href="#slide4" class="btn btn-circle">❯</a>
-          </div>
-        </div>
-        <div id="slide4" class="carousel-item relative w-full">
-          <img
-            src="/images/stock/photo-1665553365602-b2fb8e5d1707.jpg"
-            class="w-full"
-          />
-          <div
-            class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
-          >
-            <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
         </div>
