About section added

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
   </head>
   <body class="container mx-auto px-20">
     <header>
-      <div class="navbar bg-base-100 bg-transparent">
+      <div class="navbar bg-base-100 py-5 bg-transparent">
         <div class="flex-1">
-          <a class="btn btn-ghost normal-case text-xl">Wicked Wok</a>
+          <a class="btn btn-ghost normal-case text-xl text-yellow-800"
+            >Wicked Wok</a
+          >
         </div>
         <div class="flex-none">
           <ul class="menu menu-horizontal px-1">
             <li class="font-bold"><a href="#">Home</a></li>
-            <li class="font-bold"><a href="#">Abut</a></li>
+            <li class="font-bold"><a href="#">About</a></li>
             <li class="font-bold"><a href="#">Menu</a></li>
             <li class="font-bold"><a href="#">Contact</a></li>
           </ul>
@@ -100,6 +102,37 @@
             <a href="#slide2" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
+        </div>
+      </div>
+    </section>
+    <!-- About section -->
+    <section class="bg-yellow-900">
+      <div class="flex gap-10 justify-center items-center">
+        <div class="flex">
+          <div>
+            <img
+              class="w-96"
+              src="/images/pexels-chevanon-photography-302896.jpg"
+              alt=""
+            />
+          </div>
+          <div>
+            <img
+              class="w-96"
+              src="/images/pexels-marina-abrosimova-6569510.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="w-96">
+          <h2 class="text-5xl font-semibold pb-5">Wicked wok</h2>
+          <p class="pb-5">
+            The café had been in the town for as long as anyone could remember,
+            and it had become a beloved institution among the locals. The café
+            was run by a friendly and hospitable couple, Mr. and Mrs. Johnson.
+            Barista Cafe is free Bootstrap 5 HTML layout provided by Tooplate.
+          </p>
+          <button class="btn bg-black text-yellow-800">Meet Wokers</button>
         </div>
       </div>
     </section>
