about section and menu section added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
     </header>
     <!-- Banner -->
-    <section>
+    <section class="">
       <div class="carousel w-full">
         <div id="slide1" class="carousel-item relative w-full">
           <div
@@ -106,19 +106,19 @@
       </div>
     </section>
     <!-- About section -->
-    <section class="bg-yellow-900">
-      <div class="flex gap-10 justify-center items-center">
+    <section class="bg-yellow-900 py-20">
+      <div class="flex gap-10 justify-center p-5 items-center">
         <div class="flex">
           <div>
             <img
-              class="w-96"
+              class="w-96 rounded-xl"
               src="/images/pexels-chevanon-photography-302896.jpg"
               alt=""
             />
           </div>
           <div>
             <img
-              class="w-96"
+              class="w-96 bg-blend-darken rounded-xl"
               src="/images/pexels-marina-abrosimova-6569510.jpg"
               alt=""
             />
@@ -132,7 +132,212 @@
             was run by a friendly and hospitable couple, Mr. and Mrs. Johnson.
             Barista Cafe is free Bootstrap 5 HTML layout provided by Tooplate.
           </p>
-          <button class="btn bg-black text-yellow-800">Meet Wokers</button>
+          <button class="btn text-center bg-black text-yellow-800">
+            Meet Wokers
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="pt-20 bg-yellow-600 px-10">
+      <h2 class="text-center pb-10 text-4xl">Meet People</h2>
+      <div class="flex gap-5">
+        <div>
+          <div class="relative">
+            <img
+              class="h-96 w-96 transition delay-150 bg-blue-500 hover:-translate ease-in hover:scale-110 rounded-xl duration-300"
+              src="/images/pexels-anete-lusina-5721008.jpg"
+              alt=""
+            />
+          </div>
+          <div class="relative z-0 bottom-32 ps-2 text-white">
+            <div class="flex gap-10 items-center">
+              <div>
+                <h4 class="text-2xl font-semibold">Stave jobs</h4>
+              </div>
+              <div>
+                <p class="bg-yellow-500 px-5 rounded-2xl">Boss</p>
+              </div>
+            </div>
+            <p class="pe-20 text-xl">
+              your favorite coffee daily lives tempor.
+            </p>
+          </div>
+        </div>
+        <div>
+          <div class="relative">
+            <img
+              class="h-96 w-96 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 rounded-xl duration-300"
+              src="/images/pexels-ketut-subiyanto-4349730.jpg"
+              alt=""
+            />
+          </div>
+          <div class="relative z-0 bottom-32 ps-2 text-white">
+            <div class="flex gap-10 items-center">
+              <div>
+                <h4 class="text-2xl font-semibold">Stave jobs</h4>
+              </div>
+              <div>
+                <p class="bg-yellow-500 px-5 rounded-2xl">Boss</p>
+              </div>
+            </div>
+            <p class="pe-20 text-xl">
+              your favorite coffee daily lives tempor.
+            </p>
+          </div>
+        </div>
+        <div>
+          <div class="relative">
+            <img
+              class="h-96 w-96 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 rounded-xl duration-300"
+              src="/images/pexels-los-muertos-crew-7488709.jpg"
+              alt=""
+            />
+          </div>
+          <div class="relative z-0 bottom-32 ps-2 text-white">
+            <div class="flex gap-10 items-center">
+              <div>
+                <h4 class="text-2xl font-semibold">Stave jobs</h4>
+              </div>
+              <div>
+                <p class="bg-yellow-500 px-5 rounded-2xl">Boss</p>
+              </div>
+            </div>
+            <p class="pe-20 text-xl">
+              your favorite coffee daily lives tempor.
+            </p>
+          </div>
+        </div>
+        <div>
+          <div class="relative">
+            <img
+              class="h-96 w-96 transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 rounded-xl duration-300"
+              src="/images/pexels-tim-douglas-6205769.jpg"
+              alt=""
+            />
+          </div>
+          <div class="relative z-0 bottom-32 ps-2 text-white">
+            <div class="flex gap-10 items-center">
+              <div>
+                <h4 class="text-2xl font-semibold">Stave jobs</h4>
+              </div>
+              <div>
+                <p class="bg-yellow-500 px-5 rounded-2xl">Boss</p>
+              </div>
+            </div>
+            <p class="pe-20 text-xl">
+              your favorite coffee daily lives tempor.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Our Menu -->
+    <section class="py-5 text-white px-10" id="menu">
+      <h2 class="text-center text-white text-3xl pb-5">Our Menu</h2>
+      <div class="flex gap-10 justify-center items-center">
+        <!-- menu 1 -->
+        <div class="bg-yellow-600 w-96 rounded-xl py-5 px-16">
+          <div class="pb-10">
+            <p class="text-center text-sm italic">Delicious Menu</p>
+            <h4 class="text-center text-3xl">Breakfast</h4>
+          </div>
+          <!-- Item 1 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Pancakes</p>
+              <p class="text-1xl">$12.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 2 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Toasted Waffle</p>
+              <p class="text-1xl">$12.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 3 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Fried Chips R</p>
+              <p class="text-1xl">$15.00</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Rich Milk and Foam</p>
+          </div>
+          <!-- Item 4 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Pancakes</p>
+              <p class="text-1xl">$12.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 5 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Banana Cakes</p>
+              <p class="text-1xl">$15.00</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Banana, rice milk and Foam</p>
+          </div>
+        </div>
+        <!-- Menu 2 -->
+        <div class="bg-yellow-600 w-96 rounded-xl py-5 px-16"">
+          <div class="pb-10">
+            <p class="text-center text-sm italic">Favorite Menu</p>
+            <h4 class="text-center text-3xl">Coffee</h4>
+          </div>
+          <!-- Item 1 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Latte</p>
+              <p class="text-1xl">$7.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 2 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">White Coffee </p>
+              <p class="text-1xl">$5.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 3 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Chocolate Milk</p>
+              <p class="text-1xl">$10.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 4 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Green tea</p>
+              <p class="text-1xl">$6.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
+          <!-- Item 5 -->
+          <div class="pb-5">
+            <div class="flex justify-between">
+              <p class="text-1xl">Dark Chocolate</p>
+              <p class="text-1xl">$7.50</p>
+            </div>
+            <hr />
+            <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
+          </div>
         </div>
       </div>
     </section>
