--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
     </script>
   </head>
   <body class="container mx-auto px-20">
-    <header>
+    <header class="glass bg-yellow-600" id="home">
       <div class="navbar bg-base-100 py-5 bg-transparent">
         <div class="flex-1">
-          <a class="btn btn-ghost normal-case text-xl text-yellow-800"
+          <a class=" ps-3 normal-case text-xl text-yellow-800"
             >Wicked Wok</a
           >
         </div>
         <div class="flex-none">
           <ul class="menu menu-horizontal px-1">
-            <li class="font-bold"><a href="#">Home</a></li>
-            <li class="font-bold"><a href="#">About</a></li>
-            <li class="font-bold"><a href="#">Menu</a></li>
-            <li class="font-bold"><a href="#">Contact</a></li>
+            <li class="font-bold active:bg-red-500 "><a href="#home">Home</a></li>
+            <li class="font-bold active:bg-red-500"><a href="#about">About</a></li>
+            <li class="font-bold active:bg-red-500"><a href="#menu">Menu</a></li>
+            <li class="font-bold active:bg-red-500"><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -106,7 +106,7 @@
       </div>
     </section>
     <!-- About section -->
-    <section class="bg-yellow-900 py-20">
+    <section class="bg-yellow-900 py-20" id="about">
       <div class="flex gap-10 justify-center p-5 items-center">
         <div class="flex">
           <div>
@@ -341,5 +341,78 @@
         </div>
       </div>
     </section>
+    <!-- Reviews TODO-->
+    <section>
+
+    </section>
+    <!-- contact -->
+    <section id="contact" class="pt-10 pb-10 px-16">
+      <div>
+        <p class="">Say Hello</p>
+        <h2 class="text-3xl font-semibold">Contact</h2>
+      </div>
+      <div class="flex gap-5 justify-center items-center">
+        <!-- Form -->
+        <div>
+          <div class="flex gap-5 items-center pb-3">
+            <div>
+              <label for="name">Name:*</label> <br>
+                <input type="text" name="name" placeholder="Name" class="input input-bordered border-yellow-800">
+            </div>
+            <div>
+              <label for="email">Email Address:*</label> <br>
+                <input type="email" name="email" placeholder="Name" class="input input-bordered border-yellow-800">
+            </div>
+          </div>
+          <label for="text">Message:*</label> <br>
+          <textarea name="text" id="" cols="60" rows="5" class="textarea" placeholder="Type your message"></textarea> <br>
+          <input type="submit" value="Send Message" class="btn bg-yellow-800 text-white">
+        </div>
+        <div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233667.49929871885!2d90.25487070319748!3d23.781067240953615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1696168442159!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </section>
+    <!-- footer -->
+    <footer>
+      <footer class="footer p-10 bg-yellow-600 text-base-content">
+        <nav>
+          <header class="footer-title">Services</header>
+          <a class="link link-hover">Branding</a>
+          <a class="link link-hover">Design</a>
+          <a class="link link-hover">Marketing</a>
+          <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav>
+          <header class="footer-title">Company</header>
+          <a class="link link-hover">About us</a>
+          <a class="link link-hover">Contact</a>
+          <a class="link link-hover">Jobs</a>
+          <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+          <header class="footer-title">Legal</header>
+          <a class="link link-hover">Terms of use</a>
+          <a class="link link-hover">Privacy policy</a>
+          <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <nav>
+          <img src="/images/logo.png" class="w-32 rounded-full" alt="">
+        </nav>
+      </footer>
+      <footer class="footer px-10 py-4 border-t bg-yellow-600 text-base-content border-yellow-800">
+        <aside class="items-center">
+
+          <p>wickedwok.com <br/>Copyright © 2023 - All right reserved by Wicked Wok</p>
+        </aside>
+        <nav class="md:place-self-center md:justify-self-end">
+          <div class="grid grid-flow-col gap-4">
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a>
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+            <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+          </div>
+        </nav>
+      </footer>
+    </footer>
   </body>
 </html>
