website mobile responsive

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       };
     </script>
   </head>
-  <body class="container mx-auto px-20">
-    <header class="glass bg-yellow-600" id="home">
+  <body class="container mx-auto lg:px-20">
+    <header class="" id="home">
       <div class="navbar bg-base-100 py-5 bg-transparent">
         <div class="flex-1">
           <a class=" ps-3 normal-case text-xl text-yellow-800"
@@ -43,12 +43,12 @@
     <!-- Banner -->
     <section class="">
       <div class="carousel w-full">
-        <div id="slide1" class="carousel-item relative w-full">
+        <div id="slide1" class="carousel-item relative lg:w-full">
           <div
             id="banner-1"
-            class="py-10 text-center text-white m-aut0 ps-10 pe-20"
+            class="py-10 text-center text-white m-auto ps-10 pe-20"
           >
-            <p class="text-xl font-medium px-96 pt-32">Welcome to wicked wok</p>
+            <p class="text-xl font-medium lg:px-96 lg:pt-32">Welcome to wicked wok</p>
             <h1 class="text-center text-7xl">Cafe Klang</h1>
             <p class="py-5 italic">your favorite coffee daily lives.</p>
             <div>
@@ -66,9 +66,9 @@
         <div id="slide2" class="carousel-item relative w-full">
           <div
             id="banner-2"
-            class="py-10 text-center text-white m-aut0 ps-10 pe-20"
+            class="py-10 text-center text-white m-auto ps-10 pe-20"
           >
-            <p class="text-xl font-medium px-96 pt-32">Welcome to wicked wok</p>
+            <p class="text-xl font-medium lg:px-96 lg:pt-32">Welcome to wicked wok</p>
             <h1 class="text-center text-7xl">Cafe Klang</h1>
             <p class="py-5 italic">your favorite coffee daily lives.</p>
             <div>
@@ -107,7 +107,7 @@
     </section>
     <!-- About section -->
     <section class="bg-yellow-900 py-20" id="about">
-      <div class="flex gap-10 justify-center p-5 items-center">
+      <div class="lg:flex gap-10 justify-center p-5 items-center">
         <div class="flex">
           <div>
             <img
@@ -124,7 +124,7 @@
             />
           </div>
         </div>
-        <div class="w-96">
+        <div class="lg:w-96">
           <h2 class="text-5xl font-semibold pb-5">Wicked wok</h2>
           <p class="pb-5">
             The café had been in the town for as long as anyone could remember,
@@ -140,7 +140,7 @@
     </section>
     <section class="pt-20 bg-yellow-600 px-10">
       <h2 class="text-center pb-10 text-4xl">Meet People</h2>
-      <div class="flex gap-5">
+      <div class="lg:flex gap-5">
         <div>
           <div class="relative">
             <img
@@ -232,17 +232,17 @@
       </div>
     </section>
     <!-- Our Menu -->
-    <section class="py-5 text-white px-10" id="menu">
+    <section class="py-5 text-white lg:px-10" id="menu">
       <h2 class="text-center text-white text-3xl pb-5">Our Menu</h2>
-      <div class="flex gap-10 justify-center items-center">
+      <div class="lg:flex gap-10 justify-center items-center">
         <!-- menu 1 -->
-        <div class="bg-yellow-600 w-96 rounded-xl py-5 px-16">
-          <div class="pb-10">
+        <div class="bg-yellow-600 lg:w-96 rounded-xl lg:py-5 px-16">
+          <div class="lg:pb-10">
             <p class="text-center text-sm italic">Delicious Menu</p>
             <h4 class="text-center text-3xl">Breakfast</h4>
           </div>
           <!-- Item 1 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Pancakes</p>
               <p class="text-1xl">$12.50</p>
@@ -251,7 +251,7 @@
             <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
           </div>
           <!-- Item 2 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Toasted Waffle</p>
               <p class="text-1xl">$12.50</p>
@@ -260,7 +260,7 @@
             <p class="text-slate-600 text-sm">Brewed coffee and steamed milk</p>
           </div>
           <!-- Item 3 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Fried Chips R</p>
               <p class="text-1xl">$15.00</p>
@@ -269,7 +269,7 @@
             <p class="text-slate-600 text-sm">Rich Milk and Foam</p>
           </div>
           <!-- Item 4 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Pancakes</p>
               <p class="text-1xl">$12.50</p>
@@ -278,7 +278,7 @@
             <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
           </div>
           <!-- Item 5 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Banana Cakes</p>
               <p class="text-1xl">$15.00</p>
@@ -288,13 +288,13 @@
           </div>
         </div>
         <!-- Menu 2 -->
-        <div class="bg-yellow-600 w-96 rounded-xl py-5 px-16"">
-          <div class="pb-10">
+        <div class="bg-yellow-600 lg:w-96 rounded-xl lg:py-5 mt-5 lg:mt-0 px-16"">
+          <div class="lg:pb-10">
             <p class="text-center text-sm italic">Favorite Menu</p>
             <h4 class="text-center text-3xl">Coffee</h4>
           </div>
           <!-- Item 1 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Latte</p>
               <p class="text-1xl">$7.50</p>
@@ -303,7 +303,7 @@
             <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
           </div>
           <!-- Item 2 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">White Coffee </p>
               <p class="text-1xl">$5.50</p>
@@ -312,7 +312,7 @@
             <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
           </div>
           <!-- Item 3 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Chocolate Milk</p>
               <p class="text-1xl">$10.50</p>
@@ -321,7 +321,7 @@
             <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
           </div>
           <!-- Item 4 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Green tea</p>
               <p class="text-1xl">$6.50</p>
@@ -330,7 +330,7 @@
             <p class="text-slate-600 text-sm">Fresh brewed coffee and steamed milk</p>
           </div>
           <!-- Item 5 -->
-          <div class="pb-5">
+          <div class="lg:pb-5">
             <div class="flex justify-between">
               <p class="text-1xl">Dark Chocolate</p>
               <p class="text-1xl">$7.50</p>
@@ -346,15 +346,15 @@
 
     </section>
     <!-- contact -->
-    <section id="contact" class="pt-10 pb-10 px-16">
+    <section id="contact" class="pt-10 pb-10 lg:px-16">
       <div>
         <p class="">Say Hello</p>
         <h2 class="text-3xl font-semibold">Contact</h2>
       </div>
-      <div class="flex gap-5 justify-center items-center">
+      <div class="lg:flex gap-5 justify-center items-center">
         <!-- Form -->
         <div>
-          <div class="flex gap-5 items-center pb-3">
+          <div class="lg:flex gap-5 items-center pb-3">
             <div>
               <label for="name">Name:*</label> <br>
                 <input type="text" name="name" placeholder="Name" class="input input-bordered border-yellow-800">
@@ -365,17 +365,17 @@
             </div>
           </div>
           <label for="text">Message:*</label> <br>
-          <textarea name="text" id="" cols="60" rows="5" class="textarea" placeholder="Type your message"></textarea> <br>
+          <textarea name="text" id="" cols="50" rows="5" class="textarea" placeholder="Type your message"></textarea> <br>
           <input type="submit" value="Send Message" class="btn bg-yellow-800 text-white">
         </div>
         <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233667.49929871885!2d90.25487070319748!3d23.781067240953615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1696168442159!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe class="lg:w-96 lg:h-96" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d233667.49929871885!2d90.25487070319748!3d23.781067240953615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755b8b087026b81%3A0x8fa563bbdd5904c2!2sDhaka!5e0!3m2!1sen!2sbd!4v1696168442159!5m2!1sen!2sbd" width="" height="" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
     </section>
     <!-- footer -->
     <footer>
-      <footer class="footer p-10 bg-yellow-600 text-base-content">
+      <footer class="footer lg:p-10 py-10 bg-yellow-600 text-base-content">
         <nav>
           <header class="footer-title">Services</header>
           <a class="link link-hover">Branding</a>
@@ -400,7 +400,7 @@
           <img src="/images/logo.png" class="w-32 rounded-full" alt="">
         </nav>
       </footer>
-      <footer class="footer px-10 py-4 border-t bg-yellow-600 text-base-content border-yellow-800">
+      <footer class="footer lg:px-10 py-4 border-t bg-yellow-600 text-base-content border-yellow-800">
         <aside class="items-center">
 
           <p>wickedwok.com <br/>Copyright © 2023 - All right reserved by Wicked Wok</p>
